<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/action_settings"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/choose_source"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<Spinner
	    android:id="@+id/spinner1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:entries="@array/dork_providers"
		android:prompt="@string/spinner_prompt" />

</LinearLayout>

